<resources>
    <string name="app_name">Fix It Fitness</string>

    <!-- Strings for the introduction page -->
    <string name="introduction_title">Welcome To Fix-it-Fitness</string>
    <string name="introduction_welcome">Welcome to your very own personal planner!</string>
    <string name="introduction_description_text">Strength and Conditioning</string>
    <string name="introduction_planner_text">Schedule your planner</string>

    <!-- Strings for the image descriptions   -->
    <string name="image_description_placeholder">Place holder image for the introduction screen</string>
    <string name="icon_description_people">Icon of people</string>
    <string name="icon_description_calendar">Icon of a calendar</string>
    <string name="icon_description_dumbbell">Icon of a dumbbell</string>

    <string name="continue_button_text">Continue</string>

    <!-- Strings for asking the user about configuring their prevention plan   -->
    <string name="prevention_plan_title">Build Your Prevention Plan!</string>
    <string name="prevention_plan_description">We need to know a little bit about you to build your prevention plan.</string>
    <string name="prevention_plan_button_text">Build Plan</string>

    <!-- Strings for the prevention plan questions   -->
    <string name="prevention_plan_question_1">What is your height?</string>
    <string name="prevention_plan_question_1_hint">Height (cm)</string>
    <string name="prevention_plan_question_2">What is your weight?</string>
    <string name="prevention_plan_question_2_hint">Weight (kg)</string>
    <string name="prevention_plan_name_question">What is your name?</string>
    <string name="prevention_plan_name_question_hint">Name</string>

    <string name="prevention_plan_question_3">What level are you playing football at?</string>
    <string-array name="football_levels">
        <item>Casual</item>
        <item>Amateur</item>
        <item>Semi-committed</item>
        <item>Committed</item>
    </string-array>

    <string name="prevention_plan_question_4">Where have you had previous injuries?</string>

    <string-array name="injury_locations">
        <item>Head</item>
        <item>Neck</item>
        <item>Shoulder</item>
        <item>Elbow</item>
        <item>Wrist</item>
        <item>Hand</item>
        <item>Back</item>
        <item>Hip</item>
        <item>Thigh</item>
        <item>Knee</item>
        <item>Shin</item>
        <item>Ankle</item>
        <item>Foot</item>
    </string-array>
</resources>